try this to fix the irregular row spacing on project icons

--- a/web/wp-content/themes/lf-theme/source/scss/blocks/_case-study-overview.scss
+++ b/web/wp-content/themes/lf-theme/source/scss/blocks/_case-study-overview.scss
@@ -71,7 +71,7 @@
 	grid-row-gap: 1rem;
 	grid-column-gap: 1rem;
 	grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
-	grid-template-rows: 90px;
+	grid-template-rows: auto;
 }
 
 .case-study-project-icon {
